--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-CLIENT_ID=
-CLIENT_SECRET=
-BEARER_TOKEN=
-BASE_URL=
+TWITTER_CLIENT_ID=
+TWITTER_CLIENT_SECRET=
+TWITTER_BEARER_TOKEN=
+TWITTER_BASE_URL=
 
