Refactored auth method, now using oauthlib, adding new variables to env to make this new auth method work, cleaning the code with CamelCase for classes and snake_case for functions and ussing attributes of them in multi line, casting them

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,6 @@ TWITTER_CLIENT_ID=
 TWITTER_CLIENT_SECRET=
 TWITTER_BEARER_TOKEN=
 TWITTER_BASE_URL=
+TWITTER_USER_ACCESS_TOKEN=
+TWITTER_USER_ACCESS_TOKEN_SECRET=
 
