--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -14,7 +14,7 @@ RUN pip install setuptools==69.0.3 \
      cryptography==42.0.0 \
      python-dotenv \
      ruff \
-     tweepy
+     requests-oauthlib
 
 RUN SNIPPET="export PROMPT_COMMAND='history -a' && export HISTFILE=/commandhistory/.bash_history" \
     && echo "$SNIPPET" >> "/root/.bashrc"
